--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,4 @@
 {
-  "buildCommand": "prisma generate && next build",
-  "env": {
-    "DATABASE_URL": "@database-url",
-    "NEXTAUTH_URL": "@nextauth-url",
-    "NEXTAUTH_SECRET": "@nextauth-secret",
-    "LINKEDIN_CLIENT_ID": "@linkedin-client-id",
-    "LINKEDIN_CLIENT_SECRET": "@linkedin-client-secret"
-  }
+  "buildCommand": "prisma generate && next build"
 }
 
